<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.big9.app.data.viewMovel.AuthViewModel" />
    </data>
 <!--   <androidx.core.widget.NestedScrollView
        android:background="@drawable/loginpin_bg_gradian"
        android:layout_width="match_parent"
        android:layout_height="match_parent">-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/loginpin_bg_gradian"
            tools:context=".ui.activity.DashBoardActivity">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/logo_color" />

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/firstPinView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5"
                app:layout_constraintVertical_bias="0.13999999">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium_500"
                    android:text="forgot password?"
                    android:textColor="@color/logo_color"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium_500"
                    android:text=" Don't worry"
                    android:textColor="@color/g1"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView31"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium_500"
                android:gravity="center"
                android:text="Please enter one time password,\nwhich is sent to your register mobile"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@+id/firstPinView"
                app:layout_constraintStart_toStartOf="@+id/firstPinView"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout11" />

            <com.chaos.view.PinView
                android:id="@+id/firstPinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="Hint."
                android:inputType="text"
                android:itemBackground="@drawable/pinview_items_back"
                android:padding="@dimen/_12sdp"
                android:text="@{viewModel.otp}"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:cursorColor="@color/pink2"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="false"
                app:itemCount="6"
                app:lineColor="@color/line_pin_1"
                app:itemHeight="40dp"
                app:itemRadius="4dp"
                app:itemSpacing="0dp"
                app:itemWidth="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31"

                app:lineWidth="-1dp"
                app:viewType="rectangle" />

            <TextView
                android:id="@+id/tv_dont_receve_otp_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/don_t_receive_code"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstPinView" />
            <!--android:text="@{viewModel.timingValue}"-->
            <TextView
                android:id="@+id/td_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/border_focus"

                tools:text="@string/resend_otp"
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dont_receve_otp_msg" />

            <TextView
                android:id="@+id/btn_info_save"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/teal_button_bg"
                android:fontFamily="@font/montserrat_medium_500"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/td_resend_otp" />

           <!-- <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                >



            </androidx.core.widget.NestedScrollView>-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_phonePad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_info_save"
                app:layout_constraintVertical_bias="0.87"
                app:spanCount="3"
                tools:listitem="@layout/keypad_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>